After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689325 - shell-app-usage: Fix several problems in xml parsing
shell-app-usage: Fix several problems in xml parsing
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-11-30 04:39 UTC by Matthias Clasen
Modified: 2012-12-01 02:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-app-usage: Fix several problems in xml parsing (2.08 KB, patch)
2012-11-30 04:40 UTC, Matthias Clasen
accepted-commit_now Details | Review

Description Matthias Clasen 2012-11-30 04:39:58 UTC
Coverity rightly complained about the context < 0 comparison.
In addition, context was shadowing the parameter of the same
name, and the loops over the attributes were unnecessarily
running all the way.
Comment 1 Matthias Clasen 2012-11-30 04:40:00 UTC
Created attachment 230263 [details] [review]
shell-app-usage: Fix several problems in xml parsing
Comment 2 Giovanni Campagna 2012-11-30 15:32:58 UTC
Review of attachment 230263 [details] [review]:

Looks good.